2019-10-03 Wiley E. Hill <wileyhill@gmail.com

    * gschem/src/iface/i_command.c: Remove unnecessary initialization of
      GError in do_documentation.

2019-09-28 Wiley E. Hill <wileyhill@gmail.com

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations.
    * po/en_GB.po: Update Great Britain.
    * po/es.po: Update Spanish translations.
    * po/fa.po: Update Persian translations.

2019-09-21 Wiley E. Hill <wileyhill@gmail.com

    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.

2019-09-20 Wiley E. Hill <wileyhill@gmail.com

    * src/base/gschem_main_window.c: Remove inclusion of geda_gtk_compat.h
      because this is already indirectly included by gschem.h.

    * scheme/gschem/gschem-tools-menu.scm: Add tooltips for "Spice netlist" and
      SDB netlist" menu items.

    * src/x/x_menus.c: Revise x_menu_setup_ui to continue loop over scheme items
      when get_menu_item_from_scheme returns an error.

    * src/x/x_window.c: Utilize gtk_widget_set_double_buffered instead of using
      GTK_WIDGET_UNSET_FLAGS macro with call.

2019-09-16 Wiley E. Hill <wileyhill@gmail.com

    * src/x_menus.c: Replace g_object_set "visible" with gtk_widget_show, update
      "View/Redraw" error message, and wrap the backup file menu label with gettext.

2019-09-14 Wiley E. Hill <wileyhill@gmail.com

    * etc/system-gschemrc.scm: Translate draw order menu items.
