@@ -2324,23 +2324,29 @@ COMMAND (do_documentation)
 
       if (attrib_doc) {
 
-        GError *error;
-        bool    result;
+        bool result;
 
 #if 1
         result = x_show_uri (attrib_doc);
 
+        if (!result) {
+
+          geda_log("%s \"%s\"\n", _("Check path:"), attrib_doc);
+
+        }
+
 #else
+        GError *error;
 
         /* Use this instead until debian-gnome work out thier iceweasel issue */
         result = g_app_info_launch_default_for_uri(attrib_doc, NULL, &error);
-
-#endif
 
         if (!result) {
           geda_log("%s: %s\n", _("error"), error->message);
           g_error_free (error);
         }
+
+#endif
 
         GEDA_FREE(attrib_doc);
       }
